--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="Tv Network Organizational Tool">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="Tv Network Organizational Tool" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
+  </head>
 
-    <header>
+  <header></header>
 
-    </header>
+  <body>
+    <div id="contentContainer">
+      <div class="tab">
+        <button class="tablinks" onclick="openCity(event, 'Content')">
+          Content
+        </button>
+        <button class="tablinks" onclick="openCity(event, 'Comercial')">
+          Comercial
+        </button>
+      </div>
 
-    <body>
-        
-    </body>
+      <div id="Content" class="tabcontent">
+          <div id="contentThumbnail">
+            <img src="https://i.ytimg.com/vi/DzRGBAUz5mA/maxresdefault.jpg">
+            <p>Clickbait Thumbnails!</p>
+          </div>
+          <div id="contentThumbnail">
+            <img src="https://i.ytimg.com/vi/DzRGBAUz5mA/maxresdefault.jpg">
+            <p>Clickbait Thumbnails!</p>
+          </div>
+          <div id="contentThumbnail">
+            <img src="https://i.ytimg.com/vi/DzRGBAUz5mA/maxresdefault.jpg">
+            <p>Clickbait Thumbnails!</p>
+          </div>
+          <div id="contentThumbnail">
+            <img src="https://i.ytimg.com/vi/DzRGBAUz5mA/maxresdefault.jpg">
+            <p>Clickbait Thumbnails!</p>
+          </div>
+      </div>
 
-    <footer>
+      <div id="Comercial" class="tabcontent">
+        <h3>Paris</h3>
+        <p>Paris is the capital of France.</p>
+      </div>
+    </div>
+  </body>
 
-    </footer>
+  <footer></footer>
+  
 </html>
