added placeholder thumbnails for content and comercial tabs

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
             <p>Clickbait Thumbnails!</p>
           </div>
           <div id="contentThumbnail">
-            <img src="https://i.ytimg.com/vi/DzRGBAUz5mA/maxresdefault.jpg">
-            <p>Clickbait Thumbnails!</p>
+            <img src="https://i.ytimg.com/vi/QNNbBMIkvnI/maxresdefault.jpg">
+            <p>Fortnight Gave Me A Divorce!</p>
           </div>
           <div id="contentThumbnail">
-            <img src="https://i.ytimg.com/vi/DzRGBAUz5mA/maxresdefault.jpg">
-            <p>Clickbait Thumbnails!</p>
+            <img src="https://i.pinimg.com/564x/03/b3/e4/03b3e44e3a978307f6b6aeabb4ee9c3b.jpg">
+            <p>Swedish ASMR!</p>
           </div>
           <div id="contentThumbnail">
-            <img src="https://i.ytimg.com/vi/DzRGBAUz5mA/maxresdefault.jpg">
-            <p>Clickbait Thumbnails!</p>
+            <img src="https://i.imgur.com/ColWCbu.jpg">
+            <p>Dick Stuck In VCR Again?!</p>
           </div>
       </div>
       
